[gd_scene load_steps=4 format=3 uid="uid://c8shhyyacm7rn"]

[ext_resource type="Script" path="res://mvc/views/Node2D/ChoixDifficulty/ChoixDifficultyScript.gd" id="1_qcsjs"]
[ext_resource type="Texture2D" uid="uid://bpdfvn1j0iyl8" path="res://mvc/views/images/backgrounds/menu.png" id="2_t4tuv"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_nk24h"]
bg_color = Color(0, 0.143123, 0.276469, 1)

[node name="PanelChoixScenario" type="Node2D"]
script = ExtResource("1_qcsjs")

[node name="menu" type="Node2D" parent="."]
script = ExtResource("1_qcsjs")

[node name="MapV1" type="Sprite2D" parent="menu"]
position = Vector2(569, 324)
scale = Vector2(2.41004, 2.22837)
texture = ExtResource("2_t4tuv")

[node name="easy" type="Button" parent="menu"]
z_index = 1
offset_left = 143.0
offset_top = 167.0
offset_right = 418.0
offset_bottom = 253.0
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_nk24h")
text = "Facile"

[node name="medium" type="Button" parent="menu"]
z_index = 1
offset_left = 142.0
offset_top = 294.0
offset_right = 417.0
offset_bottom = 380.0
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_nk24h")
text = "Moyenne"

[node name="suivant" type="Button" parent="menu"]
z_index = 1
offset_left = 836.0
offset_top = 512.0
offset_right = 1084.0
offset_bottom = 596.0
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_nk24h")
text = "Suivant"

[node name="Description" type="Label" parent="menu"]
z_index = 1
offset_left = 502.0
offset_top = 170.0
offset_right = 996.0
offset_bottom = 282.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_font_sizes/font_size = 22
text = "Description"
autowrap_mode = 1

[node name="hard" type="Button" parent="menu"]
z_index = 1
offset_left = 146.0
offset_top = 426.0
offset_right = 421.0
offset_bottom = 512.0
theme_override_font_sizes/font_size = 25
theme_override_styles/normal = SubResource("StyleBoxFlat_nk24h")
text = "Dificile"

[connection signal="pressed" from="menu/easy" to="." method="_on_easy_pressed"]
[connection signal="pressed" from="menu/medium" to="." method="_on_medium_pressed"]
[connection signal="pressed" from="menu/suivant" to="." method="_on_suivant_pressed"]
[connection signal="pressed" from="menu/hard" to="." method="_on_hard_pressed"]
